[workspace]
exclude = ['usbd-dfu']

[patch.crates-io]
atsam4e-hal = { path = '../atsam4e/hal' }
#atsam4e8e = { path = '../atsam4e/pac/atsam4e8e' }
usbd-dfu = { path = 'usbd-dfu' }

[package]
name = "usbd-dfu-demo"
version = "0.1.0"
authors = ["Wilfried Chauveau <wilfried.chauveau@ithinuel.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
panic = "abort"
opt-level = 'z'

[dependencies]
cortex-m = "*"
cortex-m-rt = "*"
embedded-hal = "*"
hmac-sha256 = "*"

alloc-cortex-m = "*"

usb-device = "*"
usbd-serial = "*"
usbd-dfu = "*"

futures = {version = "*", default-features = false}
pin-utils = "*"
atsam4e-hal = {version="*", features = ['debug_on_buffer'], optional = true}
stm32l4xx-hal = {version="*", features = ['stm32l4x5', 'rt'], optional = true}
stm32f4xx-hal = {version="*", features = ['stm32f401', 'usb_fs', 'rt'], optional = true}

[features]
application = []
bootloader = []

need-alloc = []
debug-uart = []
debug-buffer = []

duet3d = ['atsam4e-hal/sam4e8e']
disco-l475 = ['stm32l4xx-hal']
nucleo-f401re = ['stm32f4xx-hal', 'need-alloc']
